BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_Live_Agent_Request_Type__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>HSVC_Live_Agent_Button_Developer_Name__c</fullName>
        <label>Live Agent Button Developer Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Case_Template_Name__c</fullName>
        <label>Case Template Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_Request_Type__c</fullName>
        <label>Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Live Agent Request Type</label>
</CustomObject>